[package]
name = "miner_rip_asm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
png = "0.17.9"
z80asmparse = { git = "https://github.com/brianduff/z80asmparse" }

[patch."https://github.com/brianduff/z80asmparse"]
z80asmparse = { path = "../z80asmparse" }
